fix the layout spacing of the dashboard

--- a/app/dashboard/dashboard.module.css
+++ b/app/dashboard/dashboard.module.css
@@ -2,7 +2,7 @@
 .navBar {
   max-width: 80%;
   margin: 0 auto;
-  padding: 2em 20px 20px 20px;
+  padding: 2em 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -60,13 +60,13 @@
 
 /* UPLOAD BUTTON CSS */
 .uploadButtonContainer {
-  border-radius: 16px;
-  border: 2px dashed rgba(82, 42, 112, 0.50);
+  border-radius: 13px;
+  border: 3px dashed rgba(82, 42, 112, 0.50);
   background: rgba(230, 220, 240, 0.5);
   display: flex;
   flex-direction: row;
-  min-width: 55rem !important;
-  height: 80px;
+  min-width: 200px;
+  height: 90px;
   padding: 2rem 0;
   align-items: center;
   justify-content: center;
@@ -106,7 +106,7 @@
 .uploadButtonText {
   color: var(--button-color);
   margin-top: 0.75rem;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -127,7 +127,7 @@
 .tabRow {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 35px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -154,6 +154,7 @@
   justify-content: flex-end;
   flex: 0 0 auto;
   position: relative;
+  padding-right: 0.5rem;
 }
 
 .filterPill {
@@ -270,7 +271,7 @@
 }
 
 .contentWrap {
-  max-width: 1150px;
+  max-width: 68rem;
   margin: 0 auto;
 }
 
@@ -687,7 +688,6 @@
 .sectionsWrapper {
   max-width: 1150px;
   margin: 0 auto;
-  padding: 1rem;
 }
 
 .sectionContainer {
